fixed space between the two cells (BS and PhD), line spacing of references dd, and h4+ul top margin

--- a/templates/modern/css/pdf.css
+++ b/templates/modern/css/pdf.css
@@ -124,7 +124,7 @@ body.pdf {
 
             dd {
                 /* font-size: 65%; */
-                line-height: 1.2em;
+                /* line-height: 1.2em; */
                 margin: 0;
                 word-wrap: break-word;
             }
@@ -132,12 +132,12 @@ body.pdf {
     }
 
     h4 {
-        margin: 0em 0em 0em 23%;
-        padding: 0.5em 0 0 0;
+        margin: 0em 0em 0em 22.5%;
+        padding: 0;
     }
 
     h4+ul {
-        margin: -0.4em 0 0 23%;
+        margin: -1em 0 0 22.5%;
     }
 
     ol {
@@ -185,7 +185,7 @@ body.pdf {
     }
 
     table {
-        margin: .2em 0em .5em 23%;
+        margin: .2em 0em .5em 22.5%;
         width: 77%;
     }
 
